leveraging Atlas data structures to reduce memory overhead